--- a/.github/workflows/azure-functions-app-dotnet.yml
+++ b/.github/workflows/azure-functions-app-dotnet.yml
@@ -17,5 +17,10 @@ jobs:
       with:
         dotnet-version: '7.0'
     - name: Publish
-      run: dotnet publish -c Release
-    
+      run: dotnet publish -c Release -o release
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v2.5.0
+      env:
+        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        PUBLISH_BRANCH: gh-pages  # deploying branch
+        PUBLISH_DIR: ./release/wwwroot
