--- a/.github/workflows/azure-functions-app-dotnet.yml
+++ b/.github/workflows/azure-functions-app-dotnet.yml
@@ -22,6 +22,8 @@ jobs:
       run: sed -i 's/<base href="\/"/<base href="\/BlazorPlayground\/"/g' release/wwwroot/index.html >> release/wwwroot/index.html
     - name: No Jekyll
       run: touch release/wwwroot/.nojekyll
+    - name: copy index.html to 404.html
+      run: cp release/wwwroot/index.html release/wwwroot/404.html
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v2.5.0
       env:
